--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -10,18 +10,18 @@ services:
     volumes:
       - pg_data_production:/var/lib/postgresql/data
   backend:
-    image: shalimtm/taski_backend # Качаем с Docker Hub
+    image: ${{ secrets.DOCKER_USERNAME }}/taski_backend # Качаем с Docker Hub
     env_file: .env
     volumes:
       - static_volume:/backend_static
   frontend:
-    image: shalimtm/taski_frontend  # Качаем с Docker Hub
+    image: ${{ secrets.DOCKER_USERNAME }}/taski_frontend  # Качаем с Docker Hub
     env_file: .env
     command: cp -r /app/build/. /frontend_static/
     volumes:
       - static_volume:/frontend_static
   gateway:
-    image: shalimtm/taski_gateway  # Качаем с Docker Hub
+    image: ${{ secrets.DOCKER_USERNAME }}/taski_gateway  # Качаем с Docker Hub
     env_file: .env
     volumes:
       - static_volume:/staticfiles/
